Initial commit of the inventory management system