@@ -1,2 +1,4 @@
 # InventoryManagementSystem
 WGU Software I – C482 - Task QKM2 - JavaFX inventory management system
+--module-path ${PATH_TO_FX} --add-modules javafx.fxml,javafx.controls,javafx.graphics
+
